Tue Jun 22 15:49:30 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/MPC.cfg:
          Move TAO_ROOT/MPC to dynamic_includes, we now have an IDLHelper

Fri Jun 19 15:03:30 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * contrib/utility:

          Removed these files.

Mon Jun  1 08:09:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Lib_Find.cpp:
          Fixed gcc4.4 warning in a different way, broke other builds

        * ace/config-win32-borland.h:
          Changed version checks to not have to patch again for a next
          path from Embarcadero

Mon Jun  1 05:22:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Lib_Find.cpp:
          Fixed gcc4.4 warnings

Mon Jun  1 05:15:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-borland.h:
          We new require to have update pack 3 installed

Fri May 29 16:08:32 UTC 2009  Steve Huston  <shuston@riverace.com>

        * tests/Bug_2740_Regression_Test.cpp:
        * tests/tests.mpc:
        * tests/run_test.lst: New test based on code submitted in
          Bugzilla 2740.

Fri May 29 13:36:05  2009  Marcel Smit  <msmit@remedy.nl>

        * ace/OS_NS_stropts.cpp:
        * ace/OS_NS_sys_socket.cpp:
        * include/makeinclude/platform_cegcc.GNU:

          Fixed compiler error for QoS when compiler is CE gcc.
          Removed UNDER_CE < 500.

Fri May 29 11:41:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/QoS/qos.mpc:
          Use prop:windows

Tue May 26 06:56:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Configuration.{h,cpp}
          Removed my WinCE code again, it seems to break another part
          of the test

        * ace/os_include/netinet/os_in.h:
          Layout change

        * ace/config-win32-msvc-10.h:
        * ace/config-win32-msvc-9.h:
          If we compile for Vista or higher then enable the native