@@ -1,3 +1,10 @@
+Mon Jun 29 00:29:40 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * bin/make_release.py:
+
+          Stab at update of the spec file upon release.  This will need to
+          be tested. 
+        
 Tue Jun 22 15:49:30 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/MakeProjectCreator/config/MPC.cfg:
